mobile UI distortion issue fixed

--- a/source/scss/_buttons.scss
+++ b/source/scss/_buttons.scss
@@ -7,7 +7,7 @@
     bottom: 0;
     margin-bottom: 0;
     padding: 20px 0px;
-    width: calc(100% - 70px);
+    width: calc(100% - 58px);
     margin: 0 auto;
     left: 50%;
     transform: translateX(-50%);
@@ -15,6 +15,16 @@
     border-top: 1px solid $border-clr;
     background: $white-clr;
     z-index: 99;
+
+    &.stepsAction{
+        border-top: 1px solid $brd-box;
+        padding-top: 15px;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+        width: calc(100% - 60px);
+    }
 
     .slds-button {
         min-width: auto;
@@ -94,7 +104,7 @@
             text-align: left;
             border: 0;
             padding: 0;
-            margin-bottom: 3em;
+            margin-bottom: 0;
             width: auto;
             left: 0;
             transform: translateX(0);
@@ -106,6 +116,13 @@
                     min-width: 200px;
                 }
                 position: static;
+            }
+            &.stepsAction{
+                margin-left: -40px;
+                margin-right: -40px;
+                padding-left: 40px;
+                padding-right: 40px;
+                width: auto;
             }
         }
     }    
