--- a/source/scss/_forms.scss
+++ b/source/scss/_forms.scss
@@ -361,16 +361,6 @@
         }
     }
     /*--------------------*/
-    .tooltip_info {
-        background: url('../images/icons/info.svg') no-repeat 0 0;
-        background-size: 30px;
-        width: 30px;
-        height: 30px;
-        right: -50px;
-        position: absolute;
-        top: 60%;
-        transform: translateY(-50%);
-    }
 
     .tooltip_info_heading {
         right: 0px;
