--- a/source/templates/Header/_header.scss
+++ b/source/templates/Header/_header.scss
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    padding: 40px 0px 20px 0px;
+    padding: 40px 15px 20px;
     margin: 0 auto;
     background: $white-clr;
 
